traversal.zigzag.traversalzigzag.TraversalZigZag.scala.error
Compilation error:
TraversalZigZag:25: error: expected start of definition
	override def forward(i:Int)  { 
                 ^TraversalZigZag:28: error: expected start of definition
	override def forward()  {
                 ^TraversalZigZag:31: error: expected start of definition
	override def backward(i:Int) {
                 ^TraversalZigZag:34: error: expected start of definition
	override def backward() {
                 ^TraversalZigZag:37: error: Unmatched closing brace '}' ignored here
}
^